# AgentBasedMCMC

./: .gitignore  AgentBasedMCMC.ipr  LICENSE  README.md  abm.cnf  lib
cppsrc/: ABM.h  ABMAssimilationProblem.h  ABMCMC.h  ABMConstraint.h  ABMConstraints.h  ABMEndStateSolver.h  ABMImportanceSampler.cpp  ABMImportanceSampler.h  ABMLikelihood.h  ABMPlotter.h  ABMPrior.h  ABMProblem.h  ABMRejectionSampler.h  ABMStateDeltaPMF.cpp  ABMStateDeltaPMF.h  ABMWindow.h  ActFermionicDistribution.h  Agent.h  AgentStateDistribution.h  AgentStateObservation.h  AssimilationProblem.h  AssimilationWindow.cpp  AssimilationWindow.h  BasisProbability.cpp  BasisProbability.h  BernoulliModelState.h  BinarySolutionSet.h  BinomialDistribution.h  BinomialObservation.h  BinomialPMF.h  BoundSwapPivot.cpp  BoundSwapPivot.h  CMakeLists.txt  CatMouseAgent.cpp  CatMouseAgent.h  ColumnPivot.cpp  ColumnPivot.h  ConvexPMF.cpp  ConvexPMF.h  ConvexPMFBase.h  (+85 more)
cppsrc/agents/: BinomialAgent.h  CatMouseAgent.cpp  CatMouseAgent.h  PredPreyAgent.cpp  PredPreyAgent.h
cppsrc/diagnostics/: Autocorrelation.h  ChainStats.h  CompoundLogger.h  Dataflow.h  KLDivergence.h  MeanAndVariance.h  MultiChainStats.h  ScaleReduction.h  Variogram.h
cppsrc/gnuplot-iostream/: gnuplot-iostream.h
cppsrc/test/: MyTestClass.c  MyTestClass.h
src/: ABM.h  ABM.kt  ABMCMC.kt  ABMConstraints.h  ABMConstraints.kt  ABMDomain.kt  ABMExpSampler.h  ABMImportanceSampler.h  ABMLikelihood.h  ABMMatrices.kt  ABMPosterior.h  ABMPrior.h  ABMPriorSampler.h  ABMSampler.h  ActFermionicDistribution.h  Agent.kt  AgentStateObservation.h  AssimilationWindow.h  Basis.h  BernoulliModelState.h  BernoulliStartState.h  BinarySolutionSet.h  BinomialDistribution.h  BinomialObservation.h  BoundSwapPivot.cpp  BoundSwapPivot.h  CMakeLists.txt  CatAndMouseABM.kt  ConstrainedFactorisedDistribution.h  ConstrainedFactorisedSampler.h  Constraint.cpp  Constraint.h  Constraint.kt  ConstraintList.kt  ConvexPMF.h  ConvexPMFBase.h  ConvexPMFProduct.cpp  ConvexPolyhedron.h  ConvexPolyhedron.kt  CountableDomain.kt  (+120 more)
src/agents/: BinomialAgent.cpp  BinomialAgent.h  CatMouseAgent.cpp  CatMouseAgent.h  PredPreyAgent.h  ReducedPredPreyAgent.h
src/conjunctiveNormalForm/: CnfContext.kt  CnfFormula.kt  CnfSatProblem.kt  Literal.kt  OrClause.kt
src/data/: PredPrey10-5.prob  PredPrey10-5.stat  PredPrey16-16.prob  PredPrey16-16.stat  PredPrey16-2.prob  PredPrey16-4.prob  PredPrey16-4.stat  PredPrey16-8.prob  PredPrey16-8.stat  PredPrey32-16-1.0-10.5.stat  PredPrey32-16.prob  PredPrey32-16.stat  PredPrey32-16Poisson.stat  PredPrey32-2.prob  PredPrey32-4.prob  PredPrey32-4.stat  PredPrey32-8.prob  PredPrey32-8.stat  PredPrey8-16.prob  PredPrey8-16.stat  PredPrey8-2.prob  PredPrey8-4.prob  PredPrey8-4.stat  PredPrey8-8.prob  PredPrey8-8.stat
src/diagnostics/: AgentDataflow.h  Autocorrelation.h  ChainStats.h  ConvergenceAnalysis.h  Dataflow.h  MeanAndVariance.h  MultiChainStats.h  ScaleReduction.h  ValarrayLogger.h
src/include/: BoostSerialization.h  MutableCategoricalArray.h  Random.h  SortedSparseVec.h  SparseVec.h  StlStream.h  asyncvector.h  debug.h
src/lib/: AgentMultisetExtensions.kt  ArrayStore.kt  CollectionExtensions.kt  Extensions.kt  FieldArithmetic.kt  Fraction.kt  Gnuplot.kt  HashMultiset.kt  KDTree.kt  ModelEventExtensions.kt  Multiset.kt  MutableCategorical.kt  MutableCategoricalArray.kt  MutableCategoricalMap.kt  MutableMultiset.kt  NumberArithmetic.kt  RandomGeneratorExtensions.kt  SettableLazy.kt  SparseColIntMatrix.kt
src/lib/abstractAlgebra/: AlgebraicOperators.kt  DoubleField.kt  DoubleFieldElement.kt  DoubleOperators.kt  Field.kt  FieldElement.kt  FieldElementOperators.kt  FieldOperators.kt  FractionField.kt  FractionOperators.kt  IntField.kt  IntFieldElement.kt  IntOperators.kt  WithFieldElementOperators.kt
src/lib/collections/: GridMap.kt  IntToDoubleHashMap.kt  Multiset.kt  MutableIterableExtensions.kt  MutableListView.kt  MutableMapView.kt  MutableViewGridMap.kt  RemovableSequence.kt
src/lib/sparseIntMatrix/: HashColIntMatrix.kt  HashFractionVector.kt  HashIntVector.kt  (+6 more)
src/treeMCMC/: CompletionOracle.kt  MCMCTree.kt  MCMCTreeNode.kt  PolyhedralCompletionOracle.kt
src/version1/: ActFermionicDistribution.h  Constraint.h  ConvexPolyhedron.h  Forecast.h  IndexSet.h  PerturbableFunction.h  SparseBasisSampler.h  StartStateDistribution.h  StateTrajectory.h  TrajectoryImportance.h  WeightedFactoredConvexDistribution.h
(+103 files in other folders)
